# salient

./: .gitignore  README.md  content.js  manifest.json  popup.html  popup.js
backend/: api.py  backend.py  bert_sim.py  ensemble_sim.py  faiss_sim.py  jaccard_sim.py  pyproject.toml  similarity.http  sklearn_sim.py  test.http
backend/notebooks/: experiment.ipynb
infra/modules/acm_certificate/: main.tf  outputs.tf  variables.tf
infra/modules/ec2/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf
infra/modules/elb/: main.tf  outputs.tf  variables.tf
infra/modules/security_group/: main.tf  variables.tf
infra/modules/vpc/: main.tf  outputs.tf  variables.tf
infra/modules/waf/: module.tf  variables.tf
plugin/: manifest.json  popup.js
salient_plugin/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
toody_plugin/: README.md  background.js  package-lock.json  package.json  popup.html  styles.css
